--- a/src/style/partials/_general.scss
+++ b/src/style/partials/_general.scss
@@ -1,12 +1,11 @@
-// --------------
-// General styles
-// --------------
+//---------------
+//-General styles
+//---------------
 
 body {
 	margin: 0;
 	height: 100vh;
-	// overflow-x: hidden;
-	// overflow-y:scroll;
+	overflow: hidden;
 }
 
 .container-fluid {
