--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -1,6 +1,6 @@
-// ------
-// Header
-// ------
+//-------
+//-Header
+//-------
 
 .header {
 	.row {
@@ -17,7 +17,6 @@
 		}
 	}
 	.header-content {
-		width: 100vw;
 		max-width: 1230px;
 		position: absolute;
 		top: 0;
@@ -56,26 +55,24 @@
 			animation: typing-visibility 0s 1s forwards linear, typing 5s 1s steps(30, end), blink-caret .5s step-end infinite;
 		}
 	}
-}
-
-.icon-angle-down {
-	position: absolute;
-	text-align: center;
-	width: 50px;
-	height: 62px;
-	top: -50vh;
-	left: 100%;
-	transform: translate(-100%, 0);
-	font-size: 28px;
-	z-index: 10;
-	cursor: pointer;
-	opacity: 0;
-	line-height: 62px;
-	transition: 0.5s;
-	&:hover, &:focus {
-		animation: bounce 2s infinite;
+	.icon-angle-down {
+		position: absolute;
+		text-align: center;
+		width: 50px;
+		height: 62px;
+		top: -50vh;
+		left: 100%;
+		transform: translate(-100%, 0);
+		font-size: 28px;
+		z-index: 10;
+		cursor: pointer;
+		opacity: 0;
+		line-height: 62px;
+		transition: 0.5s;
+		&:hover, &:focus {
+			animation: bounce 2s infinite;
+		}
 	}
-
 }
 
 @keyframes typing {
