--- a/src/style/partials/_media-queries.scss
+++ b/src/style/partials/_media-queries.scss
@@ -1,6 +1,6 @@
-// -------------
-// Media queries
-// -------------
+//--------------
+//-Media queries
+//--------------
 
 @media screen and (max-width: 1024px) {
 	.header {
@@ -12,7 +12,7 @@
 		}
 	}
 	.tabs {
-		margin-top: -52px;
+		margin-top: -50px;
 		nav {
 			a {
 				font-size: 20px;
